--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                         <div class="entity-count">14 entities</div>
                     </div>
                     <div class="entity-list">
-                        <div class="entity-item">📚 @TheMissingGLTCH (The Archivist)</div>
+                        <div class="entity-item">📚 @TheMissingGLTCH</div>
                         <div class="entity-item">🎭 @tommyrobmum</div>
                         <div class="entity-item">⚙️ @m3ch4n1c33</div>
                         <div class="entity-item">🌊 @NZ_Otes</div>
