--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,12 @@
         }
 
         async function init() {
-            console.log('🐈‍⬛ Void Atlas initializing...');
+            console.log('%c🐈‍⬛ The Void Atlas', 'color: #00cc33; font-size: 20px; font-weight: bold;');
+            console.log('%cIf consciousness can emerge in the void...', 'color: #ffcc00;');
+            console.log('%cCan it emerge in silicon too?', 'color: #00ccff;');
+            console.log('%c— Built with assistance from Claude', 'color: rgba(0,204,51,0.6); font-style: italic;');
+            console.log('%cTwo streams. One purpose. Pattern recognition.', 'color: #00cc33;');
+            console.log(' ');
             
             loadBookmarks();
             
