--- a/index-test.html
+++ b/index-test.html
@@ -600,7 +600,7 @@
 
         async function fetchCatGPTPoems() {
             try {
-                const url = 'https://raw.githubusercontent.com/ClawedCode/clawedcode.github.io/main/catgpt-poems.json';
+                const url = 'https://raw.githubusercontent.com/TheMissingGLTCH/void-atlas/main/catgpt-poems.json';
                 console.log('🌙 Fetching CatGPT poems...');
                 
                 const response = await fetch(url);
